commit spring, mysql, flyway
lệnh npm run dev để chạy container docker luồng frontend, backend-spring, mySQL và Flyway
lệnh npm run seed để chạy dữ liệu vừa đủ để test filter, pagination