@@ -2,20 +2,20 @@ package com.ivyts.backend.service;
 
 import com.ivyts.backend.common.exception.ApiException;
 import com.ivyts.backend.domain.course.Course;
-import com.ivyts.backend.domain.course.CourseRepository;
-import com.ivyts.backend.domain.enrollment.EnrollmentRepository;
 import com.ivyts.backend.domain.enrollment.EnrollmentStatus;
-import com.ivyts.backend.domain.mocktest.MockTestRepository;
 import com.ivyts.backend.domain.mocktest.MockTestStatus;
 import com.ivyts.backend.domain.order.Order;
-import com.ivyts.backend.domain.order.OrderRepository;
 import com.ivyts.backend.domain.order.OrderStatus;
-import com.ivyts.backend.domain.post.BlogPostRepository;
 import com.ivyts.backend.domain.post.BlogPostStatus;
 import com.ivyts.backend.domain.user.User;
-import com.ivyts.backend.domain.user.UserRepository;
 import com.ivyts.backend.domain.user.UserRole;
 import com.ivyts.backend.security.AuthUser;
+import com.ivyts.backend.service.coursestore.CourseStore;
+import com.ivyts.backend.service.enrollmentstore.EnrollmentStore;
+import com.ivyts.backend.service.mockteststore.MockTestStore;
+import com.ivyts.backend.service.orderstore.OrderStore;
+import com.ivyts.backend.service.poststore.PostStore;
+import com.ivyts.backend.service.userstore.UserStore;
 import com.ivyts.backend.web.admin.AdminMapper;
 import com.ivyts.backend.web.admin.dto.UpdateAdminUserRequest;
 import java.time.Instant;
@@ -33,52 +33,58 @@ import org.springframework.stereotype.Service;
 @Service
 public class AdminService {
 
-    private final UserRepository userRepository;
-    private final CourseRepository courseRepository;
-    private final EnrollmentRepository enrollmentRepository;
-    private final MockTestRepository mockTestRepository;
-    private final BlogPostRepository blogPostRepository;
-    private final OrderRepository orderRepository;
+    private final UserStore userStore;
+    private final CourseStore courseStore;
+    private final EnrollmentStore enrollmentStore;
+    private final MockTestStore mockTestStore;
+    private final PostStore postStore;
+    private final OrderStore orderStore;
     private final AdminMapper adminMapper;
 
     public AdminService(
-        UserRepository userRepository,
-        CourseRepository courseRepository,
-        EnrollmentRepository enrollmentRepository,
-        MockTestRepository mockTestRepository,
-        BlogPostRepository blogPostRepository,
-        OrderRepository orderRepository,
+        UserStore userStore,
+        CourseStore courseStore,
+        EnrollmentStore enrollmentStore,
+        MockTestStore mockTestStore,
+        PostStore postStore,
+        OrderStore orderStore,
         AdminMapper adminMapper
     ) {
-        this.userRepository = userRepository;
-        this.courseRepository = courseRepository;
-        this.enrollmentRepository = enrollmentRepository;
-        this.mockTestRepository = mockTestRepository;
-        this.blogPostRepository = blogPostRepository;
-        this.orderRepository = orderRepository;
+        this.userStore = userStore;
+        this.courseStore = courseStore;
+        this.enrollmentStore = enrollmentStore;
+        this.mockTestStore = mockTestStore;
+        this.postStore = postStore;
+        this.orderStore = orderStore;
         this.adminMapper = adminMapper;
     }
 
     public Map<String, Object> getStats(AuthUser authUser) {
         ensureAdmin(authUser);
-        long totalUsers = userRepository.count();
-        long totalStudents = userRepository.findAll().stream().filter(user -> user.getRole() == UserRole.STUDENT).count();
-        long totalTeachers = userRepository.findAll().stream().filter(user -> user.getRole() == UserRole.TEACHER).count();
-        long totalAdmins = userRepository.findAll().stream().filter(user -> user.getRole() == UserRole.ADMIN).count();
-        long publishedCourses = courseRepository.findAll().stream().filter(Course::isPublished).count();
-        long publishedMockTests = mockTestRepository.findByStatus(MockTestStatus.PUBLISHED).size();
-        long publishedPosts = blogPostRepository.countByStatus(BlogPostStatus.PUBLISHED);
-        long totalEnrollments = enrollmentRepository.count();
-        long completedEnrollments = enrollmentRepository.findAll().stream().filter(enrollment -> enrollment.getStatus() == EnrollmentStatus.COMPLETED).count();
-        List<Order> paidOrders = orderRepository.findByStatus(OrderStatus.PAID);
+        List<User> allUsers = userStore.findAll();
+        List<Course> courses = courseStore.findAll();
+        var enrollmentsData = enrollmentStore.findAll();
+        var mockTests = mockTestStore.findAll();
+        var posts = postStore.findAll();
+        List<Order> paidOrders = orderStore.findByStatus(OrderStatus.PAID);
+
+        long totalUsers = allUsers.size();
+        long totalStudents = allUsers.stream().filter(user -> user.getRole() == UserRole.STUDENT).count();
+        long totalTeachers = allUsers.stream().filter(user -> user.getRole() == UserRole.TEACHER).count();
+        long totalAdmins = allUsers.stream().filter(user -> user.getRole() == UserRole.ADMIN).count();
+        long publishedCourses = courses.stream().filter(Course::isPublished).count();
+        long publishedMockTests = mockTests.stream().filter(mockTest -> mockTest.getStatus() == MockTestStatus.PUBLISHED).count();
+        long publishedPosts = posts.stream().filter(post -> post.getStatus() == BlogPostStatus.PUBLISHED).count();
+        long totalEnrollments = enrollmentsData.size();
+        long completedEnrollments = enrollmentsData.stream().filter(enrollment -> enrollment.getStatus() == EnrollmentStatus.COMPLETED).count();
         double totalRevenue = paidOrders.stream().mapToDouble(Order::getAmount).sum();
         long completionRate = totalEnrollments > 0 ? Math.round((completedEnrollments * 100.0) / totalEnrollments) : 0;
 
-        Map<String, Object> users = new LinkedHashMap<>();
-        users.put("total", totalUsers);
-        users.put("students", totalStudents);
-        users.put("teachers", totalTeachers);
-        users.put("admins", totalAdmins);
+        Map<String, Object> usersData = new LinkedHashMap<>();
+        usersData.put("total", totalUsers);
+        usersData.put("students", totalStudents);
+        usersData.put("teachers", totalTeachers);
+        usersData.put("admins", totalAdmins);
 
         Map<String, Object> content = new LinkedHashMap<>();
         content.put("publishedCourses", publishedCourses);
@@ -96,7 +102,7 @@ public class AdminService {
         revenue.put("paidOrders", paidOrders.size());
 
         Map<String, Object> data = new LinkedHashMap<>();
-        data.put("users", users);
+        data.put("users", usersData);
         data.put("content", content);
         data.put("enrollments", enrollments);
         data.put("revenue", revenue);
@@ -106,11 +112,11 @@ public class AdminService {
     public List<Map<String, Object>> getRevenueChart(AuthUser authUser) {
         ensureAdmin(authUser);
         List<MonthBucket> months = buildMonthRange(6);
-        Instant fromDate = months.getFirst().date();
+        Instant fromDate = months.isEmpty() ? Instant.now() : months.get(0).date();
         Map<String, RevenueBucket> buckets = new LinkedHashMap<>();
         months.forEach(month -> buckets.put(month.key(), new RevenueBucket(month.label(), 0, 0)));
 
-        for (Order order : orderRepository.findByStatus(OrderStatus.PAID)) {
+        for (Order order : orderStore.findByStatus(OrderStatus.PAID)) {
             Instant sourceDate = order.getPaidAt() != null ? order.getPaidAt() : order.getCreatedAt();
             if (sourceDate == null || sourceDate.isBefore(fromDate)) {
                 continue;
@@ -129,11 +135,11 @@ public class AdminService {
     public List<Map<String, Object>> getEnrollmentChart(AuthUser authUser) {
         ensureAdmin(authUser);
         List<MonthBucket> months = buildMonthRange(6);
-        Instant fromDate = months.getFirst().date();
+        Instant fromDate = months.isEmpty() ? Instant.now() : months.get(0).date();
         Map<String, EnrollmentBucket> buckets = new LinkedHashMap<>();
         months.forEach(month -> buckets.put(month.key(), new EnrollmentBucket(month.label(), 0, 0)));
 
-        enrollmentRepository.findAll().forEach(enrollment -> {
+        enrollmentStore.findAll().forEach(enrollment -> {
             if (enrollment.getCreatedAt() == null || enrollment.getCreatedAt().isBefore(fromDate)) {
                 return;
             }
@@ -151,7 +157,7 @@ public class AdminService {
 
     public List<Map<String, Object>> listUsers(AuthUser authUser) {
         ensureAdmin(authUser);
-        return userRepository.findAll().stream()
+        return userStore.findAll().stream()
             .sorted(Comparator.comparing(User::getCreatedAt, Comparator.nullsLast(Comparator.reverseOrder())))
             .map(user -> adminMapper.toAdminUserView(user, getOwnedCourseCountForUser(user)))
             .toList();
@@ -168,7 +174,7 @@ public class AdminService {
         User user = findUserOrThrow(userId);
 
         if (request.email() != null) {
-            userRepository.findByEmail(request.email().trim().toLowerCase(Locale.ROOT))
+            userStore.findByEmail(request.email().trim().toLowerCase(Locale.ROOT))
                 .filter(existing -> !existing.getId().equals(userId))
                 .ifPresent(existing -> { throw new ApiException(HttpStatus.CONFLICT, "Email already exists"); });
             user.setEmail(request.email().trim().toLowerCase(Locale.ROOT));
@@ -184,7 +190,7 @@ public class AdminService {
         if (request.bio() != null) user.setBio(blankToNull(request.bio()));
         if (request.isActive() != null) user.setActive(request.isActive());
 
-        userRepository.save(user);
+        userStore.save(user);
         return adminMapper.toAdminUserView(user, getOwnedCourseCountForUser(user));
     }
 
@@ -197,22 +203,27 @@ public class AdminService {
 
         user.setActive(false);
         user.setRefreshToken(null);
-        userRepository.save(user);
+        userStore.save(user);
         return adminMapper.toAdminUserView(user, getOwnedCourseCountForUser(user));
     }
 
     private long getOwnedCourseCountForUser(User user) {
         if (user.getRole() == UserRole.STUDENT) {
-            return enrollmentRepository.findByStudentAndStatusInOrderByCreatedAtDesc(
-                user.getId(),
-                List.of(EnrollmentStatus.ACTIVE, EnrollmentStatus.COMPLETED)
-            ).size();
+            return enrollmentStore.findByStudentAndStatusInOrderByCreatedAtDesc(
+                    user.getId(),
+                    List.of(EnrollmentStatus.ACTIVE, EnrollmentStatus.COMPLETED)
+                )
+                .stream()
+                .map(enrollment -> enrollment.getCourse())
+                .filter(courseId -> courseId != null && !courseId.isBlank())
+                .distinct()
+                .count();
         }
-        return courseRepository.findByOwner(user.getId()).size();
+        return courseStore.findByOwner(user.getId()).size();
     }
 
     private User findUserOrThrow(String userId) {
-        return userRepository.findById(userId)
+        return userStore.findById(userId)
             .orElseThrow(() -> new ApiException(HttpStatus.NOT_FOUND, "User not found"));
     }
 
